add CRUD Role and refactoring
